--- a/platforms/android/app/src/main/assets/www/contents/list-presensi.html
+++ b/platforms/android/app/src/main/assets/www/contents/list-presensi.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="assets/js/presensi.js"></script>
+<script type="text/javascript" src="assets/js/list-presensi.js"></script>
 
 <div class="appHeader bg-primary">
   <div class="left">
