--- a/platforms/android/app/src/main/assets/www/contents/dashboard-guru.html
+++ b/platforms/android/app/src/main/assets/www/contents/dashboard-guru.html
@@ -62,8 +62,8 @@
 <!-- List Mengaji -->
 <div id="sectionMengajiContainer" class=" section mt-4 mb-4 ">
     <div class="section-heading ">
-        <h2 class="title ">Daftar mengaji anda</h2>
-        <a href="javascript:void(0)" onclick="pages('list-mengaji')" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
+        <h2 class="title ">Daftar mengajar anda</h2>
+        <a href="javascript:void(0)" onclick="pages('list-pencatatan')" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
     </div>
     <div id="dashboardMengajiContainer" class="transactions">
 
