--- a/platforms/android/app/src/main/assets/www/contents/list-presensi.html
+++ b/platforms/android/app/src/main/assets/www/contents/list-presensi.html
@@ -6,6 +6,7 @@
       href="javascript:void(0)"
       onClick="pages('dashboard-guru')"
       class="headerButton goBack"
+      id="back-guru"
     >
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
@@ -15,6 +16,7 @@
       href="javascript:void(0)"
       onClick="pages('dashboard')"
       class="headerButton goBack"
+      id="back-murid"
     >
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
