--- a/www/contents/presensi.html
+++ b/www/contents/presensi.html
@@ -9,6 +9,7 @@
       href="javascript:void(0)"
       onClick="pages('dashboard')"
       class="headerButton goBack"
+      id="back-murid"
     >
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
