--- a/platforms/android/app/src/main/assets/www/contents/input-izin.html
+++ b/platforms/android/app/src/main/assets/www/contents/input-izin.html
@@ -6,6 +6,7 @@
       href="javascript:void(0)"
       onClick="pages('dashboard')"
       class="headerButton goBack"
+      id="back-murid"
     >
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
@@ -34,7 +35,7 @@
     <form method="POST" onsubmit="postIzin()">
       <div class="form-group basic">
         <div class="input-wrapper">
-          <label class="label" for="nilai">Nama User</label>
+          <label class="label" for="nilai">Nama</label>
           <input
             type="text"
             class="form-control mt-1"
