--- a/platforms/android/app/src/main/assets/www/contents/presensi.html
+++ b/platforms/android/app/src/main/assets/www/contents/presensi.html
@@ -82,7 +82,7 @@
               <div id="containerButtonSubmitPresensi">
                   <div class="row mt-3">
                       <div class="col-12">
-                          <button onClick="uploadPresensi()" class="btn btn-primary btn-lg btn-block"><i class="material-icons">cloud_upload</i>&nbsp;Simpan Presensi</button>
+                          <button onClick="uploadPresensi()" class="btn btn-primary btn-lg btn-block" id="tombol-submit"><i class="material-icons">cloud_upload</i>&nbsp;Simpan Presensi</button>
                       </div>
                   </div>
                   <div class="row mt-1">
