--- a/platforms/android/app/src/main/assets/www/contents/presensi.html
+++ b/platforms/android/app/src/main/assets/www/contents/presensi.html
@@ -33,8 +33,8 @@
       <form id="formCekPresensi">
 
         <div id="containerButtonOpen" class="btn-group btn-block" role="group">
-            <a href="javascript:void(0)" onclick="openScanner()" class="btn btn-primary btn-lg">Scan QR-Code</a>
-            <a href="javascript:void(0)" onclick="openScanner()" class="btn btn-primary btn-lg"><i class="material-icons">flip</i></a>
+            <a href="javascript:void(0)" onclick="fotoActionSheet('scan')" class="btn btn-primary btn-lg">Scan QR-Code</a>
+            <a href="javascript:void(0)" onclick="fotoActionSheet('scan')" class="btn btn-primary btn-lg"><i class="material-icons">flip</i></a>
 
         </div>
 
