--- a/www/contents/mengaji-guru.html
+++ b/www/contents/mengaji-guru.html
@@ -44,7 +44,7 @@
 <!-- list presensi -->
 <div id="sectionMengajiContainer" class="section mt-4 mb-4">
   <div class="section-heading">
-    <h2 class="title">Input data mengaji</h2>
+    <h2 class="title">Input data mengajar</h2>
   </div>
 
   <div id="pageMengajiContainer" class="section wallet-card pt-3 pb-3">
@@ -69,7 +69,7 @@
             <div class="col-12">
               <select class="form-control select2-basic" id="jenis_kitab">
                 <option value="">-- Pilih Kitab --</option>
-                <option value="Al Qur'an">Al Qur'an</option>
+                <option value="Al Quran">Al Qur'an</option>
                 <option value="Iqro">Iqro</option>
               </select>
             </div>
