--- a/platforms/android/app/src/main/assets/www/contents/edit-hafalan.html
+++ b/platforms/android/app/src/main/assets/www/contents/edit-hafalan.html
@@ -10,7 +10,7 @@
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
   </div>
-  <div class="pageTitle">Edit Menyimak</div>
+  <div class="pageTitle">Edit penilaian hafalan</div>
   <div class="right"></div>
 </div>
 
@@ -44,7 +44,7 @@
 <!-- list presensi -->
 <div id="sectionListContainer" class="section mt-4 mb-4">
   <div class="section-heading">
-    <h2 class="title">Input hafalan</h2>
+    <h2 class="title">Input Data Penilaian</h2>
   </div>
   <div
     id="pageListContainer"
