--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -178,7 +178,7 @@
       >
         <div class="col">
           <i class="material-icons">book</i>
-          <strong>Mengaji</strong>
+          <strong>Pencatatan</strong>
         </div>
       </a>
       <a
@@ -201,7 +201,7 @@
       >
         <div class="col">
           <i class="material-icons">assignment</i>
-          <strong>Hafalan</strong>
+          <strong>Penilaian</strong>
         </div>
       </a>
     </div>
