--- a/platforms/android/app/src/main/assets/www/contents/dashboard-guru.html
+++ b/platforms/android/app/src/main/assets/www/contents/dashboard-guru.html
@@ -62,7 +62,7 @@
 <!-- List Mengaji -->
 <div id="sectionMengajiContainer" class=" section mt-4 mb-4 ">
     <div class="section-heading ">
-        <h2 class="title ">Daftar mengajar anda</h2>
+        <h2 class="title ">Daftar pencatatan anda</h2>
         <a href="javascript:void(0)" onclick="pages('list-pencatatan')" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
     </div>
     <div id="dashboardMengajiContainer" class="transactions">
@@ -74,7 +74,7 @@
 <!-- List Hafalan -->
 <div id="sectionHafalanContainer" class=" section mt-4 mb-4 ">
     <div class="section-heading ">
-        <h2 class="title ">Daftar menyimak hafalan</h2>
+        <h2 class="title ">Daftar penilaian hafalan</h2>
         <a href="javascript:void(0)" onclick="pages('list-hafalan')" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
     </div>
     <div id="dashboardHafalanContainer" class="transactions">
