--- a/platforms/android/app/src/main/assets/www/contents/dashboard.html
+++ b/platforms/android/app/src/main/assets/www/contents/dashboard.html
@@ -61,7 +61,7 @@
 <!-- List Mengaji -->
 <div id="sectionMengajiContainer" class=" section mt-4 mb-4 ">
     <div class="section-heading ">
-        <h2 class="title ">Daftar mengaji anda</h2>
+        <h2 class="title ">Daftar pencatatan anda</h2>
         <a href="javascript:void(0)" onClick="pages('mengaji');" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
     </div>
     <div id="dashboardMengajiContainer" class="transactions">
@@ -73,7 +73,7 @@
 <!-- List Hafalan -->
 <div id="sectionHafalanContainer" class=" section mt-4 mb-4 ">
     <div class="section-heading ">
-        <h2 class="title ">Daftar hafalan anda</h2>
+        <h2 class="title ">Daftar penilaian anda</h2>
         <a href="javascript:void(0)" onClick="pages('hafalan');" class="link" style="text-decoration: underline;">Lihat Detailnya</a>
     </div>
     <div id="dashboardHafalanContainer" class="transactions">
