--- a/platforms/android/app/src/main/assets/www/contents/hafalan-guru.html
+++ b/platforms/android/app/src/main/assets/www/contents/hafalan-guru.html
@@ -10,7 +10,7 @@
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
   </div>
-  <div class="pageTitle">Menyimak</div>
+  <div class="pageTitle">Penilaian Hafalan</div>
   <div class="right"></div>
 </div>
 
@@ -44,7 +44,7 @@
 <!-- list presensi -->
 <div id="sectionListContainer" class="section mt-4 mb-4">
   <div class="section-heading">
-    <h2 class="title">Input Menyimak</h2>
+    <h2 class="title">Input penilaian hafalan</h2>
   </div>
   <div
     id="pageListContainer"
@@ -146,7 +146,7 @@
       href="javascript:void(0)"
       onclick="pages('list-hafalan')"
       class="btn btn-primary btn-block btn-lg"
-      >Lihat Data Menyimak</a
+      >Lihat Data Penilaian</a
     >
   </div>
 </div>
