--- a/www/contents/edit-pencatatan.html
+++ b/www/contents/edit-pencatatan.html
@@ -10,7 +10,7 @@
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
   </div>
-  <div class="pageTitle">Edit Mengajar</div>
+  <div class="pageTitle">Edit Pencatatan</div>
   <div class="right"></div>
 </div>
 
@@ -44,7 +44,7 @@
 <!-- list presensi -->
 <div id="sectionMengajiContainer" class="section mt-4 mb-4">
   <div class="section-heading">
-    <h2 class="title">Input data mengajar</h2>
+    <h2 class="title">Input data pencatatan</h2>
   </div>
 
   <div id="pageMengajiContainer" class="section wallet-card pt-3 pb-3">
