--- a/www/contents/mengaji-guru.html
+++ b/www/contents/mengaji-guru.html
@@ -10,7 +10,7 @@
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
   </div>
-  <div class="pageTitle">Mengajar</div>
+  <div class="pageTitle">Pencatatan Mengaji</div>
   <div class="right"></div>
 </div>
 
@@ -44,7 +44,7 @@
 <!-- list presensi -->
 <div id="sectionMengajiContainer" class="section mt-4 mb-4">
   <div class="section-heading">
-    <h2 class="title">Input data mengajar</h2>
+    <h2 class="title">Input data pencatatan</h2>
   </div>
 
   <div id="pageMengajiContainer" class="section wallet-card pt-3 pb-3">
@@ -172,7 +172,7 @@
       href="javascript:void(0)"
       onclick="pages('list-pencatatan')"
       class="btn btn-primary btn-block btn-lg"
-      >Lihat Data Mengajar</a
+      >Lihat Data Pencatatan</a
     >
   </div>
 </div>
