--- a/www/contents/mengaji.html
+++ b/www/contents/mengaji.html
@@ -10,7 +10,7 @@
       <i style="font-size: 2rem" class="material-icons">chevron_left</i>
     </a>
   </div>
-  <div class="pageTitle">Mengaji</div>
+  <div class="pageTitle">List Catatan Mengaji</div>
   <div class="right"></div>
 </div>
 
@@ -41,7 +41,7 @@
     <!-- list mengaji -->
     <div id="sectionMengajiContainer" class=" section mt-4 mb-4">
       <div class="section-heading">
-          <h2 class="title ">Daftar mengaji anda</h2>
+          <h2 class="title ">Daftar catatan anda</h2>
       </div>
       <div id="pageMengajiContainer" class="transactions">
 
